--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="header-social-links">
         <a href="https://wa.me/qr/KKO63RDX6PIDI1" class="twitter"><i class="bi bi-whatsapp"></i></a>
 
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=Mahmoud.taha.abdalaziz@gmail.com&su=Write You Subject &body=Write The Body"
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=THBIM98@gmail.com&su=Write You Subject &body=Write The Body"
           class="gmail"><i class="bi bi-google"></i></a>
 
         <a href="https://web.facebook.com/mahmoud.taha.276291/" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -141,7 +141,7 @@
 
             <div>
               <div>
-                <P> <span><a class="gmai"><i class="bi bi-google"></i></a></span> Mahmoud.Taha.AbdAlaziz@Gmail.com</P>
+                <P> <span><a class="gmai"><i class="bi bi-google"></i></a></span> THBIM98@gmail.com</P>
               </div>
 
               <div>
@@ -2690,13 +2690,13 @@
               <p>Egypt</p>
               <p>Cairo</p>
               <p class="mt-3"><strong>Phone:</strong> <span>+20 1121721305</span></p>
-              <p><strong>Email:</strong> <span>Mahmoud.Taha.AbdAlaziz@Gmail.com</span></p>
+              <p><strong>Email:</strong> <span>THBIM98@gmail.com</span></p>
             </div>
 
 
             <div class="social-links d-flex mt-4">
               <a
-                href="https://mail.google.com/mail/?view=cm&fs=1&to=Mahmoud.taha.abdalaziz@gmail.com&su=Write You Subject &body=Write The Body"><i
+                href="https://mail.google.com/mail/?view=cm&fs=1&to=THBIM98@gmail.com&su=Write You Subject &body=Write The Body"><i
                   class="bi bi-google"></i></a>
               <a href="https://wa.me/qr/KKO63RDX6PIDI1" class="twitter"><i class="bi bi-whatsapp"></i></a>
               <a href="https://web.facebook.com/mahmoud.taha.276291/"><i class="bi bi-facebook"></i></a>
