--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@
                 <P> <span><a class="twitter"><i class="bi bi-whatsapp"></i></a></span> +201121721305</P>
               </div>
               <div>
-                <P> <span><a href="https://www.youtube.com/@Ta-ha" class="twitter"><i class="bi bi-youtube"></i></a></span> YouTube</P>
+                <P> <span><a href="https://www.youtube.com/@Ta-ha" class="twitter"><i
+                        class="bi bi-youtube"></i></a></span> YouTube</P>
+              </div>
+              <div>
+                <P> <span><a href="https://www.linkedin.com/in/mahmoudtaha16/" class="twitter"><i
+                        class="bi bi-linkedin"></i></a></span>LinkedIn</P>
               </div>
 
 
