--- a/index.html
+++ b/index.html
@@ -149,11 +149,13 @@
               </div>
               <div>
                 <P> <span><a href="https://www.youtube.com/@Ta-ha" class="twitter"><i
-                        class="bi bi-youtube"></i></a></span> YouTube</P>
+                        class="bi bi-youtube "></i></a></span>
+                        <a  class="CenteredTitle" href="https://www.youtube.com/@Ta-ha">YouTube</a>
+                         </P>
               </div>
               <div>
-                <P> <span><a href="https://www.linkedin.com/in/mahmoudtaha16/" class="twitter"><i
-                        class="bi bi-linkedin"></i></a></span>LinkedIn</P>
+                <P> <span><a  class="twitter" href="https://www.linkedin.com/in/mahmoudtaha16/"><i
+                        class="bi bi-linkedin " ></i></a></span><a class="CenteredTitle" href="https://www.linkedin.com/in/mahmoudtaha16/"> LinkedIn</a> </P>
               </div>
 
 
