--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <link href="assets/css/MyOwnStyle.css" rel="stylesheet">
-
+ 
 
   <!-- =======================================================
   * Template Name: THBIM
@@ -128,11 +128,13 @@
 
         <div class="carousel-item active">
 
-          <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
+
+
+         <img src="assets/img/myPic.jpg" alt="">
 
 
 
-          <div class="container" style="border-radius: 10px;">
+          <div class="container" style="border-radius: 10px;transform: scale(0.6); margin-bottom: 0px;" >
 
 
 
@@ -150,12 +152,13 @@
               <div>
                 <P> <span><a href="https://www.youtube.com/@Ta-ha" class="twitter"><i
                         class="bi bi-youtube "></i></a></span>
-                        <a  class="CenteredTitle" href="https://www.youtube.com/@Ta-ha">YouTube</a>
-                         </P>
+                  <a class="CenteredTitle" href="https://www.youtube.com/@Ta-ha">YouTube</a>
+                </P>
               </div>
               <div>
-                <P> <span><a  class="twitter" href="https://www.linkedin.com/in/mahmoudtaha16/"><i
-                        class="bi bi-linkedin " ></i></a></span><a class="CenteredTitle" href="https://www.linkedin.com/in/mahmoudtaha16/"> LinkedIn</a> </P>
+                <P> <span><a class="twitter" href="https://www.linkedin.com/in/mahmoudtaha16/"><i
+                        class="bi bi-linkedin "></i></a></span><a class="CenteredTitle"
+                    href="https://www.linkedin.com/in/mahmoudtaha16/"> LinkedIn</a> </P>
               </div>
 
 
