--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <link href="assets/css/MyOwnStyle.css" rel="stylesheet">
- 
+
 
   <!-- =======================================================
   * Template Name: THBIM
@@ -130,39 +130,52 @@
 
 
 
-         <img src="assets/img/myPic.jpg" alt="">
+          <img src="assets/img/myPic.jpg" alt="">
+
+          <!-- ===========about me =  -->
 
 
 
-          <div class="container" style="border-radius: 10px;transform: scale(0.6); margin-bottom: 0px;" >
+          <div>
+            <div class=" Editedcontainer">
+              <h3>Mahmoud Taha</h3>
+              <ul>
+                <li>AEC Software Developer</li>
+                <li>Electrical BIM Engineer</li>
+                <li>Electrical Technical Office Engineer</li>
+                <li>Electrical Site Engineer</li>
+              </ul>
 
-
-
-            <h3>THBIM – Supercharge Your Revit Workflow with 35+ Powerful Add-ins in One Plugin</h3>
-            <p>Designed by professionals, for professionals – streamline your BIM tasks and boost productivity.</p>
-
-            <div>
-              <div>
-                <P> <span><a class="gmai"><i class="bi bi-google"></i></a></span> THBIM98@gmail.com</P>
+              <div style="margin-top: 10px;">
+                <div>
+                  <P> <span><a class="gmai"><i class="bi bi-google"></i></a></span> THBIM98@gmail.com</P>
+                </div>
+                <div>
+                  <P> <span><a class="twitter"><i class="bi bi-whatsapp"></i></a></span> +201121721305</P>
+                </div>
+                <div>
+                  <P> <span><a href="https://www.youtube.com/@Ta-ha" class="twitter"><i
+                          class="bi bi-youtube "></i></a></span>
+                    <a class="CenteredTitle" href="https://www.youtube.com/@Ta-ha">YouTube</a>
+                  </P>
+                </div>
+                <div>
+                  <P> <span><a class="twitter" href="https://www.linkedin.com/in/mahmoudtaha16/"><i
+                          class="bi bi-linkedin "></i></a></span><a class="CenteredTitle"
+                      href="https://www.linkedin.com/in/mahmoudtaha16/"> LinkedIn</a> </P>
+                </div>
               </div>
 
-              <div>
-                <P> <span><a class="twitter"><i class="bi bi-whatsapp"></i></a></span> +201121721305</P>
-              </div>
-              <div>
-                <P> <span><a href="https://www.youtube.com/@Ta-ha" class="twitter"><i
-                        class="bi bi-youtube "></i></a></span>
-                  <a class="CenteredTitle" href="https://www.youtube.com/@Ta-ha">YouTube</a>
-                </P>
-              </div>
-              <div>
-                <P> <span><a class="twitter" href="https://www.linkedin.com/in/mahmoudtaha16/"><i
-                        class="bi bi-linkedin "></i></a></span><a class="CenteredTitle"
-                    href="https://www.linkedin.com/in/mahmoudtaha16/"> LinkedIn</a> </P>
-              </div>
+            </div>
+
+
+            <div class="container" style="border-radius: 10px;transform: scale(0.7); margin-bottom: 100px;padding-bottom: 10px;">
+              <h3>THBIM – Supercharge Your Revit Workflow with 35+ Powerful Add-ins in One Plugin</h3>
+              <p>Designed by professionals, for professionals – streamline your BIM tasks and boost productivity.</p>
 
 
             </div>
+
 
           </div>
         </div><!-- End Carousel Item -->
