--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class=" Editedcontainer">
               <h3>Mahmoud Taha</h3>
               <ul>
-                <li>AEC Software Developer</li>
+                <li>Freelancer AEC Software Developer</li>
                 <li>Electrical BIM Engineer</li>
                 <li>Electrical Technical Office Engineer</li>
                 <li>Electrical Site Engineer</li>
