--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>THBIM Revit Add-ins</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+
+  <meta name="description"
+    content="Explore THBIM – a comprehensive suite of Revit add-ins designed to boost productivity in MEP, electrical, and architectural design. Automate modeling tasks, enhance BIM coordination, and accelerate your Revit workflows with tools built for professionals.">
+
+  <meta name="keywords"
+    content="Revit Add-ins, Revit Plugins, BIM Tools, MEP Revit Add-ins, Electrical BIM, Electrical Modeling, Architectural BIM Tools, Revit Automation, Dynamo Scripts, LOD 350, LOD 400, LOD 450, Revit Workflow Optimization, BIM Coordination Tools, Revit for MEP, Smart Revit Extensions, BIM Engineering, Revit Families, MEP Families, Clash Detection Revit, Revit Templates, Construction BIM Tools, Electrical Design in Revit, Smart MEP Tools, Revit Scripting, Revit for Contractors, BIM Productivity, Autodesk Revit, BIM Automation, Revit Shop Drawings, Revit Detailing Tools">
+
+  <meta name="author" content="THBIM Team">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -169,7 +175,8 @@
             </div>
 
 
-            <div class="container" style="border-radius: 10px;transform: scale(0.9); margin-bottom: 100px;padding-bottom: 10px;">
+            <div class="container"
+              style="border-radius: 10px;transform: scale(0.9); margin-bottom: 100px;padding-bottom: 10px;">
               <h3>THBIM – Supercharge Your Revit Workflow with 35+ Powerful Add-ins in One Plugin</h3>
               <p>Designed by professionals, for professionals – streamline your BIM tasks and boost productivity.</p>
 
