--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 
 
-          <img src="assets/img/myPic.jpg" alt="">
+          <img src="assets/img/WebsiteCover.png" alt="">
 
           <!-- ===========about me =  -->
 
