--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 <body class="index-page" style="zoom: 90%;">
 
-  <header id="header" class="header d-flex align-items-center sticky-top">
+  <header id="header" class="header d-flex align-items-center sticky-top" style="background-color: rgb(0, 153, 255,0.8);">
     <div class="container position-relative d-flex align-items-center">
 
       <a href="index" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename"><span style="color: rgb(1, 255, 18);">TH</span><span
-            style="color: rgb(7, 103, 247);">BIM</span></h1><span>.</span>
+            style="color: rgb(7, 103, 247);">BIM</span></h1><span></span>
       </a>
 
 
@@ -64,7 +64,7 @@
 
 
 
-      <nav id="navmenu" class="navmenu">
+      <nav id="navmenu" class="navmenu" >
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
           <li class="dropdown"><a><span>Revit Add-ins</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -142,7 +142,7 @@
 
 
 
-          <div>
+          <div style="position: relative;" class="Coverr">
             <div class=" Editedcontainer">
               <h3>Mahmoud Taha</h3>
               <ul>
@@ -176,13 +176,20 @@
 
 
             <div class="container"
-              style="border-radius: 10px;transform: scale(0.9); margin-bottom: 100px;padding-bottom: 10px;">
+              style="border-radius: 10px;transform: scale(0.9); ">
               <h3>THBIM – Supercharge Your Revit Workflow with 35+ Powerful Add-ins in One Plugin</h3>
               <p>Designed by professionals, for professionals – streamline your BIM tasks and boost productivity.</p>
 
 
             </div>
 
+
+
+            
+            <div class="RevitPluginByTHBIM" >
+              <h3>Revit Plugins by</h3>
+              <h3><span class="THStyle">TH</span>BIM</h3>
+            </div>
 
           </div>
         </div><!-- End Carousel Item -->
@@ -469,13 +476,6 @@
 
 
       </div>
-
-
-
-
-
-
-
 
 
 
